K8S/infra/monotoring/utils/v2_2-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#    - hosts:
#        - mon.control1.kube.local
#      secretName: mon-tls
  rules:
#    - host: "mon.control1.kube.local"
    - http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-sys-connect
                port:
                  number: 3000
          - pathType: Prefix
            path: /vmagent
            backend:
              service:
                name: vmagent-sys-connect
                port:
                  number: 8429
